add base urls to index category links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ hero: '/images/hero.jpg'
 
 <div id="container">
     <div class="intro">
-        <p>Notes from the sidewalk about <a href="/category/philosophy">philosophy</a>, <a href="/category/publishing">publishing</a>, and so on by <a href="http://www.chrismeyns.xyz/about">Chris Meyns</a>. <a href="/feed.xml" class="rss">RSS feed</a></p>
+        <p>Notes from the sidewalk about <a href="{{ site.baseurl }}/category/philosophy">philosophy</a>, <a href="{{ site.baseurl }}/category/publishing">publishing</a>, and so on by <a href="http://www.chrismeyns.xyz/about">Chris Meyns</a>. <a href="/feed.xml" class="rss">RSS feed</a></p>
 
 </div>
 
